<?xml version="1.0" encoding="utf-8"?>

<resources>
<string name="app_name">College Feed</string>

<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>
<string name="openDrawer">open_drawer</string>
<string name="closeDrawer">close_drawer</string>

<!-- Navigation Drawer menu labels -->
<string name="nav_home">Home</string>
<string name="nav_groups">Groups</string>
<string name="nav_library">Library</string>
<string name="nav_schedule">Schedule</string>
<string name="nav_trendy">Trendy</string>
<string name="nav_settings">Settings</string>
<string name="nav_about_us">About Us</string>

<!-- Toolbar titles when navigation menu item is selected -->
<string-array name="nav_item_activity_titles">
    <item>Home</item>
    <item>Groups</item>
    <item>Library</item>
    <item>Schedule</item>
    <item>Trendy</item>
    <item>Settings</item>
</string-array>

<string name="activity_title_about_us">About Us</string>
<string name="activity_title_privacy_policy">Privacy Policy</string>
<string name="action_clear_all">Clear All</string>
<string name="action_logout">Logout</string>
<string name="action_settings">Settings</string>
<string name="action_mark_all_read">Mark All as Read</string>
<string name="privacy_policy">Privacy Policy</string>



<!-- Nav Drawer List Item Icons -->
<!-- Keep them in order as the titles are in -->
<array name="nav_drawer_icons">
    <item>@drawable/ic_home</item>
    <item>@drawable/ic_people</item>
    <item>@drawable/ic_photos</item>
    <item>@drawable/ic_communities</item>
    <item>@drawable/ic_pages</item>
    <item>@drawable/ic_whats_hot</item>
    <item>@drawable/ic_people</item>
</array>

<!-- Content Description -->
<string name="desc_list_item_icon">Item Icon</string>

<!--old
home
groups
library
schedule
trendy
settings

about us
contact us
-->
<string name="drawer_open">Slider Menu Opened</string>
<string name="drawer_close">Slider Menu Closed</string>


    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="event_remove_title">Delete Event</string>>
    <string name="event_remove_messege">Are you sure you want to remove the event?</string>
    <string name="event_remove">Remove</string>
    <string name="event_removed_response_conformation">Event Deleted.</string>
    <string name="event_edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="event_modified_response_conformation">Event Modified.</string>

    <string-array name="event_long_click_menu_list">
        <item>@string/event_edit</item>
        <item>@string/event_remove</item>
    </string-array>





</resources>

