<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_groups"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/nav_groups" />
    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/ic_local_library_black_24dp"
        android:title="@string/nav_library" />

    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/ic_schedule_black_24dp"
        android:title="@string/nav_schedule" />

    <item
        android:id="@+id/nav_trendy"
        android:icon="@drawable/ic_whats_hot"
        android:title="@string/nav_trendy" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/nav_settings"/>
</group>

<item android:title="Other">
    <menu>
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/nav_about_us" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:title="@string/privacy_policy" />
    </menu>
</item>

</menu>